garde/tests/rules/snapshots/rules__rules__inner__alphanumeric_invalid.snap
---
source: garde/tests/./rules/inner.rs
expression: snapshot
---
Inner {
    inner: [
        [
            "!!!!",
        ],
    ],
}
value.inner[0][0]: not alphanumeric


