garde/tests/rules/snapshots/rules__rules__inner__alphanumeric_some_invalid-2.snap
---
source: garde/tests/./rules/inner.rs
assertion_line: 90
expression: snapshot
---
NestedSliceInsideOption {
    inner: Some(
        [
            "!!!!",
        ],
    ),
}
inner[0]: not alphanumeric


