garde/tests/rules/snapshots/rules__rules__inner__alphanumeric_some_invalid-3.snap
---
source: garde/tests/./rules/inner.rs
assertion_line: 96
expression: snapshot
---
DoubleNestedSliceInsideOption {
    inner: Some(
        [
            [
                "!!!!",
            ],
        ],
    ),
}
inner[0][0]: not alphanumeric


