garde/tests/rules/snapshots/rules__rules__inner__alphanumeric_some_invalid-4.snap
---
source: garde/tests/./rules/inner.rs
assertion_line: 102
expression: snapshot
---
OptionInsideSlice {
    inner: [
        Some(
            "!!!!",
        ),
    ],
}
inner[0]: not alphanumeric


