garde/tests/rules/snapshots/rules__rules__inner__alphanumeric_some_invalid-5.snap
---
source: garde/tests/./rules/inner.rs
assertion_line: 120
expression: snapshot
---
BoxedSlice {
    inner: [
        "!!!!",
    ],
}
inner[0]: not alphanumeric
