garde/tests/rules/snapshots/rules__rules__inner__alphanumeric_some_invalid.snap
---
source: garde/tests/./rules/inner.rs
assertion_line: 84
expression: snapshot
---
NotNestedOption {
    inner: Some(
        "!!!!",
    ),
}
inner: not alphanumeric


